// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions Modal modal with actions snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  onEntering={[Function]}
  show={true}
>
  <ModalFooter>
    <div
      className="modal-footer_tertiary"
      key="tertiary"
    >
      <Button
        className="px-0"
        color="accent"
        disabled={false}
        type="button"
        variant="tertiary"
        width="auto"
      >
        Tertiary
      </Button>
    </div>
    <Button
      color="accent"
      disabled={false}
      key="secondary"
      type="button"
      variant="secondary"
      width="auto"
    >
      Cancel
    </Button>
    <Button
      className="ml-2"
      color="accent"
      disabled={false}
      key="primary"
      type="button"
      variant="primary"
      width="auto"
    >
      Primary
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`Default Modal modal without header or content snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  onEntering={[Function]}
  show={true}
>
  <ModalFooter>
    <Button
      color="accent"
      disabled={false}
      key="secondary"
      type="button"
      variant="secondary"
      width="auto"
    >
      Close
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`Extended Modal extended modal snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  onEntering={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <div
      className="custom-title"
    >
      title
    </div>
  </ModalHeader>
  <Component>
    <p
      className="custom-body"
    >
      body
    </p>
  </Component>
  <ModalFooter>
    <div
      className="custom-footer"
    >
      footer
    </div>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`Simple Modal modal with title and content snapshop 1`] = `
<Bootstrap(Modal)
  backdrop="static"
  onEntering={[Function]}
  show={true}
>
  <ModalHeader
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle>
      modal title
    </ModalTitle>
  </ModalHeader>
  <Component>
    modal content
  </Component>
  <ModalFooter>
    <Button
      color="accent"
      disabled={false}
      key="secondary"
      type="button"
      variant="secondary"
      width="auto"
    >
      Close
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;
